// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`service-entity-header Renders \`service-entity-header\` with custom props 1`] = `
<div
  class="layout justify-space-between align-center"
>
  <div
    class="flex"
  >
    <div
      class="ma-0 pa-0 v-simple-checkbox"
    >
      <div
        class="v-input--selection-controls__input"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate material-icons theme--dark white--text"
        >
          check_box
        </i>
        <div
          class="v-input--selection-controls__ripple white--text"
        />
      </div>
    </div>
  </div>
  <div
    class="flex pa-2"
  >
    <i
      aria-hidden="true"
      class="v-icon notranslate material-icons theme--light white--text"
      style="font-size: 16px;"
    />
  </div>
  <div
    class="flex pl-1 white--text text-subtitle-1 xs12"
  >
    <div
      class="layout align-center"
    >
      <div
        class="mr-1 entity-name"
      >
        entity_name_field
      </div>
      <button
        class="mx-1 v-btn v-btn--icon v-btn--round theme--dark v-size--small"
        style="background-color: purple;"
        type="button"
      >
        <span
          class="v-btn__content"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate material-icons theme--dark"
            style="font-size: 16px;"
          >
            done_all
          </i>
        </span>
      </button>
      <button
        class="mx-1 v-btn v-btn--icon v-btn--round theme--dark v-size--small"
        style="background-color: blue;"
        type="button"
      >
        <span
          class="v-btn__content"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate material-icons theme--dark"
            style="font-size: 16px;"
          >
            sticky_note_2
          </i>
        </span>
      </button>
      <button
        class="mx-1 v-btn v-btn--icon v-btn--round theme--dark v-size--small"
        type="button"
      >
        <span
          class="v-btn__content"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate material-icons theme--dark"
            style="font-size: 16px;"
          >
            delete
          </i>
        </span>
      </button>
      <c-no-events-icon-stub
        color="white"
        top=""
      />
      <div>
        <div
          class="v-alert entity-alert ma-0 px-2 py-1 v-sheet theme--light black"
          role="alert"
        >
          <div
            class="v-alert__wrapper"
          >
            <div
              class="v-alert__content"
            >
          This action cannot be applied
            </div>
            <button
              aria-label="Close"
              class="v-alert__dismissible v-btn v-btn--icon v-btn--round theme--light v-size--small"
              type="button"
            >
              <span
                class="v-btn__content"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  cancel
                </i>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`service-entity-header Renders \`service-entity-header\` with default props 1`] = `
<div
  class="layout justify-space-between align-center"
>
  <div
    class="flex"
  >
    <div
      class="ma-0 pa-0 v-simple-checkbox v-simple-checkbox--disabled"
    >
      <div
        class="v-input--selection-controls__input"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate v-icon--disabled material-icons theme--dark"
        >
          check_box_outline_blank
        </i>
      </div>
    </div>
  </div>
  <div
    class="flex pa-2"
  >
    <i
      aria-hidden="true"
      class="v-icon notranslate material-icons theme--light white--text"
      style="font-size: 16px;"
    />
  </div>
  <div
    class="flex pl-1 white--text text-subtitle-1 xs12"
  >
    <div
      class="layout align-center"
    >
      <div
        class="mr-1 entity-name"
      >
        name
      </div>
      <c-no-events-icon-stub
        color="white"
        top=""
      />
      <div>
        <!---->
      </div>
    </div>
  </div>
</div>
`;
